--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -194,7 +194,7 @@
         let calDate = new Date('2022-11-11');
         if (calDate <= today) {
             myModalTitle.innerText = '11 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'D&eacute;couvrez ou red&eacute;couvrez un compte Instagram hilarant, Les Caract&egrave;res, partag&eacute; par Brief.me pendant le confinement et qui me fait toujours autant rire&nbsp;! La com&eacute;dienne Lison Daniel s&rsquo;amuse &agrave; incarner diff&eacute;rents personnages st&eacute;r&eacute;otyp&eacute;s que nous avons tous d&eacute;j&agrave; crois&eacute;s un jour ou l&rsquo;autre&nbsp;: Isabelle <a href="https://www.instagram.com/p/CjDmLabMQBU/" target="_blank" rel="noopener">la bourgeoise parisienne</a>, M&eacute;lanie <a href="https://www.instagram.com/p/CdD_q7BKJwg/" target="_blank" rel="noopener">la Marseillaise au sang chaud</a> ou encore Franck, <a href="https://www.instagram.com/p/CMxaCspqSuz/" target="_blank" rel="noopener">caviste bio et passionn&eacute;</a> <p class="signature">– Morgane</p>.';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -206,7 +206,7 @@
         let calDate = new Date('2022-11-12');
         if (calDate <= today) {
             myModalTitle.innerText = '12 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'En me promenant sur YouTube, je suis tomb&eacute;e sur une cat&eacute;gorie de vid&eacute;os assez particuli&egrave;re&nbsp;: <a href="https://www.brief.me/Calendrier/imh1212/" target="_blank" rel="noopener">les restaurations d&rsquo;objets anciens</a>. <p class="signature">– Imène</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -242,7 +242,7 @@
         let calDate = new Date('2022-11-15');
         if (calDate <= today) {
             myModalTitle.innerText = '15 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Parmi tous les articles de la rubrique &laquo;&nbsp;&Ccedil;a peut servir&nbsp;&raquo; cette ann&eacute;e, en voici trois qui m&rsquo;ont &eacute;t&eacute; particuli&egrave;rement utiles. J&rsquo;y ai appris qu&rsquo;il &eacute;tait bon de <a href="https://app.brief.me/article/2022-09-09-14385-faire-baisser-la-glycemie-en-quelques-minutes-de-marche" target="_blank" rel="noopener">faire un peu d&rsquo;exercice apr&egrave;s les repas</a> (ce qui n&rsquo;emp&ecirc;che pas de faire la sieste apr&egrave;s), qu&rsquo;il &eacute;tait possible d&rsquo;afficher sur une carte <a href="https://app.brief.me/article/2022-09-02-14356-des-destinations-accessibles-en-moins-de-cinq-heures-de-train" target="_blank" rel="noopener">toutes les destinations accessibles en moins de cinq heures de train</a> et qu&rsquo;il &eacute;tait pr&eacute;f&eacute;rable de <a href="https://app.brief.me/article/2022-08-16-14290-ne-pas-tuer-les-araignees" target="_blank" rel="noopener">garder les araign&eacute;es en vie</a>. <p class="signature">– Laurent</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -278,7 +278,7 @@
         let calDate = new Date('2022-11-18');
         if (calDate <= today) {
             myModalTitle.innerText = '18 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Je vous propose de d&eacute;couvrir les cha&icirc;nes YouTube Scilabus et Fouloscopie, qui parlent de science de mani&egrave;re tr&egrave;s accessible, &agrave; travers <a href="https://www.brief.me/Calendrier/mgg1812/" target="_blank" rel="noopener">deux vid&eacute;os originales qui m&rsquo;ont beaucoup plu</a>. <p class="signature">– Morgane</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -290,7 +290,7 @@
         let calDate = new Date('2022-11-19');
         if (calDate <= today) {
             myModalTitle.innerText = '19 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Il para&icirc;t que nous devons limiter nos trajets en avion&hellip; C&rsquo;est pourquoi je vous recommande <a href="https://app.brief.me/article/2022-06-17-14084-voyager-en-un-clic" target="_blank" rel="noopener">notre &laquo;&nbsp;&Ccedil;a vaut un clic&nbsp;&raquo; le plus d&eacute;paysant de l&rsquo;ann&eacute;e</a>. Et si vous disposez d&rsquo;un peu plus de temps, vous pouvez plonger dans le jeu g&eacute;ographique <a href="https://www.geoguessr.com/" target="_blank" rel="noopener">&laquo;&nbsp;GeoGuessr&nbsp;&raquo;</a>&nbsp;qui vous invite &agrave; deviner les lieux dans lesquels il vous emm&egrave;ne. <p class="signature">– Laurent</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
