--- a/Calendrier/index.html
+++ b/Calendrier/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 <div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
-    <h1>Calendrier de l'Avent 2022</h1>
-    <p>Une case par jour et on ne triche pas ! D'ailleurs on ne peut pas ;-)</p>
+    <h1>Calendrier de l’Avent 2022</h1>
+    <p>Une case par jour et on ne triche pas&nbsp;! D’ailleurs on ne peut pas&nbsp;;-)</p>
 </div>
 <div class="galerie">
 
@@ -54,7 +54,7 @@
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h5 id="myModalTitle">Titre</h5>
+        <h3 id="myModalTitle">Titre</h3>
         <div id="myModalText">La réponse est 42.</div>
     </div>
 </div>
