--- a/Calendrier/index.html
+++ b/Calendrier/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
     <h1>Calendrier de l'Avent 2022</h1>
-    <p>Une case par jour et on ne triche pas ! D'ailleurs on ne peut pas ;-)</p>
+    <p>Une case par jour et on ne triche pas&nbsp;! D'ailleurs on ne peut pas&nbsp;;-)</p>
 </div>
 
 <div id="galerie" class="galerie"></div>
