--- a/Calendrier/index.html
+++ b/Calendrier/index.html
@@ -66,7 +66,7 @@
             ["24", "Un <a href='https://ofnik.github.io/Calendrier/memory/jeu-du-memory.html' target='_blank'>jeu du Memory</a> en version Good Memories (c’est mieux sur un ordinateur que sur mobile, mais ça peut passer en le tenant à l’horizontale). Bonne soirée de Noël&nbsp;!"],
         ]
         for (i = 0; i < calendar_content.length; i++) {
-            galerie.innerHTML += '<img class="image-day" id="image' + calendar_content[i][0] + '" src="/img/' + calendar_content[i][0] + '.png" alt="Récompense du ' + calendar_content[i][0] + ' décembre" data-toggle="modal" data-target="#myModal" data-message="' + calendar_content[i][1] + '" data-day="' + calendar_content[i][0] + '"/>'
+            galerie.innerHTML += '<img class="image-day" id="image' + calendar_content[i][0] + '" src="https://ofnik.github.io/Calendrier/img/' + calendar_content[i][0] + '.png" alt="Récompense du ' + calendar_content[i][0] + ' décembre" data-toggle="modal" data-target="#myModal" data-message="' + calendar_content[i][1] + '" data-day="' + calendar_content[i][0] + '"/>'
         }
 
         $(document).on("click", ".image-day", function () {
