--- a/Calendrier2023/Pages/index.html
+++ b/Calendrier2023/Pages/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
-    <h1>Calendrier de l'Avent 2023</h1>
+    <h1>Calendrier de l’Avent 2023</h1>
     <p>Spécial médias</p>
 </div>
 
