--- a/Calendrier2023/Pages/index.html
+++ b/Calendrier2023/Pages/index.html
@@ -14,8 +14,8 @@
     <p>Spécial médias</p>
 </div>
 
-<p>Voici un texte assez basique.
-</p>
+<div class="article">Voici un texte assez basique.
+</div>
   
 </body>
 </html>
