--- a/Calendrier2023/Pages/index.html
+++ b/Calendrier2023/Pages/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     
 </head>
 <body>
@@ -14,7 +14,7 @@
     <p>Spécial médias</p>
 </div>
 
-<div class="article">Voici un texte assez basique 3.
+<div class="article">Voici un texte assez basique 4.
 </div>
   
 </body>
