--- a/Calendrier2023/Pages/index.html
+++ b/Calendrier2023/Pages/index.html
@@ -14,7 +14,7 @@
     <p>Spécial médias</p>
 </div>
 
-<div class="article">Voici un texte assez basique 4.
+<div class="article">Voici un texte assez basique.
 </div>
   
 </body>
