--- a/Calendrier2023/Pages/index.html
+++ b/Calendrier2023/Pages/index.html
@@ -4,18 +4,27 @@
     <title>Calendrier de l'Avent 2023</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../style.css">
     
 </head>
 <body>
-<div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
-    <h1>Calendrier de l’Avent 2023</h1>
-    <p>Spécial médias</p>
-</div>
+<div class="container-fluid">
+    <div class="jumbotron text-center" style="margin-bottom:0; background-color: #000033; color: white;">
+        <h2>Calendrier de l’Avent 2023</h2>
+        <p>Spécial médias</p>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-3"></div>
+      <div class="col-md-6"><div class="p-3 mb-2 bg-white text-dark border">
+            <h2 class="text-center">Comment vous dire ?</h2>
+            <p class="mt-5">Il n'y a rien à voir ici.</p>
+            <p class="mt-3"><a href="https://ofnik.github.io/Calendrier2023/">Revenir aux cases du calendrier</a></p>
+      </div></div>
+      <div class="col-md-3"></div>
+    </div>
+  </div>
 
-<div class="article">Voici un texte assez basique 2.
-</div>
-  
 </body>
 </html>
