--- a/Calendrier2023/index.html
+++ b/Calendrier2023/index.html
@@ -66,7 +66,7 @@
             ["24", "XXX"],
         ]
         for (i = 0; i < calendar_content.length; i++) {
-            galerie.innerHTML += '<img class="image-day" id="image' + calendar_content[i][0] + '" src="https://ofnik.github.io/Calendrier/img/' + calendar_content[i][0] + '.png" alt="Récompense du ' + calendar_content[i][0] + ' décembre" data-toggle="modal" data-target="#myModal" data-message="' + calendar_content[i][1] + '" data-day="' + calendar_content[i][0] + '"/>'
+            galerie.innerHTML += '<img class="image-day" id="image' + calendar_content[i][0] + '" src="https://ofnik.github.io/Calendrier2023/img/' + calendar_content[i][0] + '.png" alt="Récompense du ' + calendar_content[i][0] + ' décembre" data-toggle="modal" data-target="#myModal" data-message="' + calendar_content[i][1] + '" data-day="' + calendar_content[i][0] + '"/>'
         }
 
         $(document).on("click", ".image-day", function () {
